# frontend-designs

./: .gitignore  CLAUDE.md  README.md  SETUP.md  kill-servers.py  launch.py  package.json  pyproject.toml  requirements.txt
backend/: README.md  SUMMARY.md  app.py  init_db.py
blog-pages/blog-ai-production/: index.html
blog-pages/blog-api-powered/: README.md  index.html  style.css
blog-pages/blog-dark-minimal/: content.md  index.html  style.css
blog-pages/blog-magazine/: README.md  index.html  style.css
blog-pages/blog-modern-card/: index.html  style.css
blog-pages/blog-newspaper/: index.html
blog-pages/blog-post-01/: README.md  content.md  index.html  style.css
blog-pages/blog-post-02/: content.md  index.html
blog-pages/blog-post-03/: README.md
blog-pages/blog-post-04/: README.md  content.md  index.html
blog-pages/blog-post-05/: README.md  content.md  style.css
html-css-js/landing-page-01/: README.md  index.html
html-css-js/landing-page-02/: index.html
html-css-js/landing-page-03/: index.html
html-css-js/landing-page-04/: index.html
html-css-js/landing-page-05/: style.css
html-css-js/landing-page-06/: index.html
landing-pages/ai-landing-hero/: about.html  contact.html  easy-integration.html  fast-processing.html  index.html  scalable.html  style.css
landing-pages/card-layout-tools/: about.html  data-processing.html  features.html  image-analysis.html  index.html  pricing.html  style.css  text-generation.html
landing-pages/full-width-hero/: index.html  script.js  style.css
landing-pages/landing-page-02/: style.css
(+35 files in other folders)
