[project]
name = "frontend-designs"
version = "0.1.0"
description = "A reference library of frontend UI designs and examples for AI projects"
requires-python = ">=3.8"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "gradio==4.16.0",
    "streamlit==1.30.0",
    "sqlalchemy==2.0.25",
    "aiosqlite==0.19.0",
]
